--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "backend": "json-server --watch ./src/app/backend/db.json"
   },
   "private": true,
   "dependencies": {
@@ -19,7 +20,14 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@popperjs/core": "^2.6.0",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.5.1",
+    "json-server": "^0.16.3",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.13.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
